--- a/league/season_details.qmd
+++ b/league/season_details.qmd
@@ -3,21 +3,22 @@ title: "Season Details"
 ---
 
 
-:::{.callout-note icon=false}
-
-
-Registration opening soon for 2026 Spring NMHockey Season!
-
+::::{.announcement-container}
+:::{.announcement}
+**Registration opening soon for 2026 Spring NMHockey Season!**
 :::
+::::
+
+
 
 
 We are starting registration for the 2026 Spring NMHockey season at the Outpost Ice Arena and the MAC. Currently rostered players at the Outpost and MAC will be given priority through Sunday, December 7. Payments may be made by Venmo or check by mail. See below under Payment Methods for details. We especially encourage current league members to sign up early in the process for the upcoming season to guarantee their spot in the league. Please also let us know if you are not able to play next season.
 
 Currently rostered players at both the Outpost and MAC may start making payments Tuesday, November 25.
 
-New players or returning players should visit the New or Returning Player Information page and reach out via email or text to let me know they are interested in joining a team. Please note, it could take some time to respond as this is a busy time of the season.
+New players or returning players should visit the [New or Returning Player Information](player_info.qmd) page and reach out via [email or text](staff.qmd) to let me know they are interested in joining a team. Please note, it could take some time to respond as this is a busy time of the season.
 
-We always strive to get every player on a team who interested in joining, but given we maintain a limited number of skaters and one goalie per team, it may not be possible to accommodate everyone. Any players we are not able to get on a team may sub ( subbing in the league ) when the league starts up. Players that are subbing will be given priority when there is a mid-season opening, based on the best match of skill level for the player they are replacing. Subbing is also a great way to get ice time, determine the best division for a player and provide and opportunity for new players to get to know New Mexico’s great hockey community.
+We always strive to get every player on a team who interested in joining, but given we maintain a limited number of skaters and one goalie per team, it may not be possible to accommodate everyone. Any players we are not able to get on a team may sub ([subbing in the league](rules.qmd#Substitutes) ) when the league starts up. Players that are subbing will be given priority when there is a mid-season opening, based on the best match of skill level for the player they are replacing. Subbing is also a great way to get ice time, determine the best division for a player and provide and opportunity for new players to get to know New Mexico’s great hockey community.
 
 ---
 
@@ -33,7 +34,7 @@ Important notes about partial payments:
 ::::{.columns}
 
 :::{.column width=47%}
-# Outpost Season Details
+# Outpost Season Details {.unnumbered}
 
 We are planning to fill rosters for 24 teams again: 4 E Division, 4 D Division, 4 C Division, 4 B2 Division, and 4 B1 Division teams.
 
@@ -41,11 +42,11 @@ If space permits, players may skate in more than one division. Players will rece
 
 
 :::
-:::{.column width=46%}
+:::{.column width=6%}
 
 :::
 :::{.column width=47%}
-# MAC Season Details
+# MAC Season Details {.unnumbered}
 
 We are planning to fill 4 Tuesday (Intermediate – Advanced) and 4 Thursday (Beginner- Intermediate) teams.
 
