--- a/league/rules.qmd
+++ b/league/rules.qmd
@@ -3,16 +3,16 @@ title: "Rules"
 ---
 
 
-# League Mission
+## League Mission
 
 Our goal is to promote the game of ice hockey through the introduction and education of new players and provide an organized, fun environment for seasoned players. The outcome of the games, though important, is not what we are striving for. If, at season’s end, a player can reflect on the season and see improvement in his/her play and/or enjoyed their experience, we have achieved our goal. Simply put, we want a person to become a better hockey player and enjoy the great game of ice hockey.
 
 
-# Rules
+## Rules
 
 NMHockey is a USA Hockey Program. All Players in the NMHockey League must be 18 years or older to participate. Non-check hockey with contact and slapshots permitted will be played. All games are played using the current USA Hockey Official Rules of Ice Hockey, except as fortified below in the NMHockey League policies and procedures.
 
-## Zero Tolerance
+### Zero Tolerance
 
 
 The NMHockey League fully supports and enforces the USA Hockey Zero Tolerance Policy.
@@ -23,7 +23,7 @@ A penalty (Zero Tolerance) shall be assessed whenever a player:
 2. Uses obscene or vulgar language at any time, including any swearing, even if it is not directed at a particular person.
 3. Visually demonstrates any sign of dissatisfaction with an official’s decision. Any time that a player persists in any of these actions, they shall be assessed a misconduct penalty. A game misconduct shall result if the player continues such action.
 
-## USA Hockey Rule Fortifications
+### USA Hockey Rule Fortifications
 
 
 1. Game misconducts: All game misconduct penalties (goalies and skaters) require immediate removal from the game and carry an automatic 1 game suspension per USAHockey rules (Rule 404b). NMHockey will impose a 1 year probation and the league Disciplinary Committee (consisting of the divisional Vice-Commissioners) will review and determine if any supplementary suspensions are warranted.
@@ -38,7 +38,7 @@ A penalty (Zero Tolerance) shall be assessed whenever a player:
 <br><br>Consumption of alcohol on the bench or ice is strictly prohibited by NMHockey, USA Hockey, the Outpost Ice Arena, and the MAC. Players found to be drinking on the bench may be ejected from the game and may face additional suspension, up to expulsion from the league. Referees that witness a player or players consuming alcohol on the bench may end the game – rendering the game forfeit. A game forfeiture will result in zero points for both teams in that game. Teams may choose to finish the game with no referees, but it will no longer be USAH sanctioned and all game stats shall be negated.
 9. NMHockey reserves the right to dismiss any player from the league with a pro-rated refund if they are deemed disruptive or found to be a detriment to their division or league as a whole. The decision to dismiss a player from the league may or may not be reviewed by the league disciplinary committee.
 
-## Suspensions
+### Suspensions
 
 1. Players (both skaters and goalies) receiving suspensions will serve their suspension in consecutive games for the team that they are rostered.
 2. Players participating in multiple leagues will serve their suspension across all teams they are rostered.  For example, if a player receives an 8 game suspension for a game misconduct in the D division and also plays in the C division, they will be suspended for their following 8 games across both divisions (e.g. 4 games in the D and 4 games in the C).
@@ -49,7 +49,7 @@ A penalty (Zero Tolerance) shall be assessed whenever a player:
 7. Players who quit the league before their probation or suspension is completed will be required to serve the remainder of their probation once they return.  In addition, if less than a year has passed they will also be required to serve the remainder of their suspension. If more than a year has passed, they must instead pay a fine equivalent to current skater league fees for the number of remaining games in their suspension.  Players will be required to pay the equivalent fine before being allowed to substitute in the league.
 
 
-## Discipline Committee
+### Discipline Committee
 
 The Disciplinary Committee is responsible for arbitrating when on or off ice infractions occur related to the NMHockey League. The committee is comprised of the Vice-Commissioners and the Executive Disciplinary Committee members. Although, the duty of the Disciplinary Committee is to arbitrate and impose game suspensions when warranted, this is not the primary goal. The league strives to use this as an opportunity to learn where the league can improve and to mentor players in hopes of preventing a repeat of these actions.
 
@@ -57,12 +57,12 @@ The Disciplinary Committee is responsible for arbitrating when on or off ice inf
 2. Discipline Committee Review Initiation: All game misconducts will be reviewed by the committee. However, any infraction on or off the ice regardless of severity may be escalated by committee members for review. Information relating to the infraction will be gathered. This includes; written or verbal statements by the individual(s) committing the infraction, referees, off-ice officials and witnesses.
 3. Discipline Committee Decision Process: The Disciplinary Committee shall meet to review the information gathered and make a recommendation to the Executive Disciplinary Committee on course of action. The League Commissioner shall notify the player of the committee decision.
 
-## USA Hockey Registration
+### USA Hockey Registration
 
 USA Hockey registration/membership is required for all participants. All players on each team’s roster, including substitutes, must be registered with USA Hockey. USA Hockey membership provides player insurance. Everyone participating in a league game or practice must be a USA Hockey member or the coverage for all players is invalidated. All players who participate in the league must REGISTER individually on-line with USA Hockey. Participants must e-mail the confirmation they receive from USA Hockey to the League Commissioner before participating in any league activities – games or practices.
 
 
-# Rosters & Team Formation
+## Rosters & Team Formation
 
 Teams are formed prior to the beginning of each season by random draw.  Prior to the draw, all skaters and goalies in each league are ranked into a small number of levels.  Each team captain or representative then randomly draws player’s names from a hat in a manner that guarantees all teams have then same number of players from each level.  This is to try to achieve parity of teams within a division, reduce animosity between players, and allow new players to easily enter the league.
 
@@ -77,11 +77,11 @@ In no case may more than 2 players be drawn together and both players must be ap
 NMHockey rosters 10 skaters and one goalie per team to ensure players receive a generous amount of icetime. Players whose skill level is not comparable to that of their peers may be reassigned or removed from the roster with a prorated refund at the commissioner’s discretion. Any team losing a player during the season, for any reason, will have a new player rostered to their team, chosen by the league commissioner.
 
 
-# Team Captains
+## Team Captains
 
 Each team has a captain who is selected by the league commissioner and divisional vice-commissioners based on recommendations from players or previous captains. Captains are league representatives and are not advocates for their team to the league commissioner.  Captains are requested to have a “C” on their jersey, even if the letter is temporary and made of tape. If the team captain is not present, the team will appoint a temporary captain for the game and notify the opposing team captain, referees and scorekeepers before the start of the game. Per USA Hockey rules, goalies may not serve as captain. Only the team captain may discuss issues or calls with the referee.  Only the team captain may call a time-out.
 
-# Substitutes
+## Substitutes
 
 A substitute is any player playing with a team on which they are not officially rostered. Any rostered player that cannot make their game shall notify their team captain by the divisional vice-commissioner’s cutoff time . Players who miss three games in a season without notifying their captain may be replaced on the team roster without a refund. Player substitutions for individual games will be coordinated ONLY through the divisional vice-commissioner or league commissioner. All substitutes must be approved by one of these two responsible parties. Substitutes are chosen based on matched skill level. However, new players to the league may be brought out to sub where their skill level is unknown.
 
@@ -89,17 +89,17 @@ All league policies apply to ANY player subbing.
 
 Any team acquiring a substitute without divisional vice-commissioner or league commissioner approval risks forfeiture of that game. In addition, any captain and/or players knowingly acquiring an unapproved sub or subbing themselves without prior approval are subject to a game suspension. Exception: A team missing a goalie may acquire a goalie sub of comparable level (plays in the same or lower division) without commissioner approval. We ask that players not solicit themselves as a sub to teams skating short.
 
-## Substitute requirements
+### Substitute requirements
 
 All substitute players must wear all the required hockey equipment and provide a current copy of their USA Hockey registration via email to the league commissioner prior to playing. Substitute players must own a solid black or blue and a solid white jersey to participate. The substitution fee for rostered skaters is $15, for rostered or non-rostered GOALIES is $10, and the non-rostered skater fee is $20. Players must check-in with and pay the scorekeepers prior to warm ups. All league policies apply to ANY player subbing.
 
 USA Hockey registration can be waived for new players the first time they play, but they must have current registration to sub thereafter.
 
-## Substitute eligibility
+### Substitute eligibility
 
 Substitute skaters and goalies will be permitted in all games including playoffs and championship/consolation. However,  substitute skaters are not eligible to participate in shoot-outs in any game.
 
-## Substitutes and game suspensions
+### Substitutes and game suspensions
 
 1. Any player serving a suspension is ineligible to substitute in any game at any level for the duration of their suspension.
 2. Teams are not permitted a substitute for any suspended skater for the first game they are suspended if the suspension occurred for actions that occurred in that team’s game. However, if a team’s goalie receives a game misconduct, they will receive a substitute for all games of the suspension. This includes playoff and championship games.
@@ -107,11 +107,11 @@ Substitute skaters and goalies will be permitted in all games including playoffs
 4. A substitute receiving a game misconduct who IS rostered to another NMHockey team will serve the suspension on their rostered team(S), but their rostered team will be allowed to receive a substitute player for all games.
 5. The Discipline Committee may render additional decisions based on the reports and game notes.
 
-# Equipment
+## Equipment
 
 (Rule 304a) All players are required to wear full hockey equipment. Players not wearing the required equipment will not be allowed to play until the proper equipment is in place.
 
-## Required equipment
+### Required equipment
 
 (all equipment must be approved for ice hockey use)
 
@@ -123,13 +123,13 @@ Substitute skaters and goalies will be permitted in all games including playoffs
 - Knee/shin protectors
 - Ice Hockey Skates
 
-## Strongly recommended, but optional equipment
+### Strongly recommended, but optional equipment
 
 - Mouth guard
 - Full or partial face protection
 - Shoulder/chest protection
 
-## League Jerseys
+### League Jerseys
 
 All ROSTERED players are required to purchase a set (one blue and one white) of the official league jerseys. Due to expected delivery times for new jerseys, rostered players may request loaner jerseys until their jerseys arrive. For more information, click here. Substitute players must own a solid black or blue and a solid white jersey to participate.
 
