--- a/league/staff.qmd
+++ b/league/staff.qmd
@@ -3,11 +3,11 @@ title: "Staff"
 ---
 
 
-# Founder and League Commissioner
+## Founder and League Commissioner
 
 - Joe Hanson – jhanson@nmhockey.com (505) 401-3652
 
-# Vice-Commissioners and Disciplinary Committee:
+## Vice-Commissioners and Disciplinary Committee:
 
 - E – Amanda Downing
 - D – Monique Curley
@@ -17,7 +17,7 @@ title: "Staff"
 - Tuesday MAC – James Devine
 - Thursday MAC – Kim Schneider
 
-# Scorekeepers
+## Scorekeepers
 
 - Laura Hood
 - Grace Hausenfleck
@@ -28,7 +28,7 @@ title: "Staff"
 - David Lee
 - Kristina Lee
 
-# League Photographer
+## League Photographer
 
 - Matt Beckmann
 
