--- a/divisions/Ediv/standings.qmd
+++ b/divisions/Ediv/standings.qmd
@@ -47,7 +47,7 @@ idx_evnp <- seq(2,nplayp,2)
 ```
 
 
-### Regular Season
+## Regular Season
 
 ```{r}
 #| warning: false
@@ -69,7 +69,7 @@ season |>
 
 
 
-### Playoffs
+## Playoffs
 
 
 ```{r}
