--- a/league/rules.qmd
+++ b/league/rules.qmd
@@ -134,6 +134,177 @@ Substitute skaters and goalies will be permitted in all games including playoffs
 All ROSTERED players are required to purchase a set (one blue and one white) of the official league jerseys. Due to expected delivery times for new jerseys, rostered players may request loaner jerseys until their jerseys arrive. For more information, click here. Substitute players must own a solid black or blue and a solid white jersey to participate.
 
 
+## Game format
+
+Games will be played in three periods, each with a 20 minute run time clock, plus an additional 5-minute 3-on-3 sudden death overtime period if the game is tied after regulation play. If the game remains tied at the end of the five (5) minute overtime period, the teams will proceed to a three-round shootout. After each team has taken three shots, if the score remains tied, the shootout will proceed to a “sudden death” format. All games include a 5 minute warmup and a 1 ½ minute break between periods. Run time is stopped upon penalties, injuries, 2 minute stop clock, team time out, captain’s time out or at referee’s discretion.
+
+### Overtime:
+
+Any game that is tied after 60 minutes of regulation play shall proceed to a 5-minute sudden death overtime period, to be played at 3-on-3. If the game remains tied after the 5-minute sudden death period, the teams shall proceed to a shootout.
+
+1. In the first phase of the shootout, each captain shall select 3 players to participate in the shootout.
+2. The home team shall select which team shoots first in the shootout and that team will go first in all subsequent rounds.
+3. No player in the penalty box at the end of the 5-minute sudden death period shall be eligible to participate in the shootout in any round.
+4 No substitute player(s) shall be eligible to participate in the shootout in any round.
+5. Shooters from each team shall alternate until all 3 shooters selected by their captains have shot, unless the game is decided before all shooters have shot.
+6. If the teams remain tied after the 3-player shootout, then the shootout shall proceed to additional rounds of one shooter each until the game is decided.
+  - In each additional round, each team will select a shooter.
+  - If the first shooter scores, the second shooter is allowed the opportunity to tie.
+  - If only one of the two shooters score, the scoring team wins. If both or neither shooter scores, the shootout continues to the next round.
+  - When proceeding to additional rounds of the shootout, no player may shoot again until all eligible shooters have shot.
+  - Once a team has proceeded through its entire roster of shooters, shooters may be selected in any order by the captain, provided that in the next progression through the roster that no player may shoot until all players have shot in that next progression through the roster.
+7. During the regular season, the loser of the shootout will receive 1 point for an overtime loss while the winner will receive 2 points.
+8. During the playoffs, games are recorded as win/loss.  No overtime loss points will be awarded.
+9. Only the single game winning goal is recorded as a goal for the team and for the shooter.
+
+
+### Penalties in Overtime:
+
+Manpower during overtime will be adjusted to reflect the situation in the game, but at no time will a team have fewer than three (3) skaters on the ice during the overtime period. If a minor penalty is assessed during overtime, the teams will play 4-on-3. If a second minor penalty is assessed to the same team during overtime, the teams will play 5-on-3. As these penalties expire and there are no stoppages, the penalized team adds players until play is 5-on-5. The manpower is adjusted accordingly at stoppages in play to get teams back to 3-on-3 play.
+
+**Case Examples:**
+
+- Case 1. Team A is assessed a penalty during regulation that carries over to the overtime period. Team B enters the overtime period on a power play, manpower would be adjusted from 5 on 4 at the end of regulation to 4-on-3 at the start of overtime. When Team A’s penalty expires, Team A adds a player to the ice making the manpower 4-on-4. At the first stoppage of play after the penalty expiration, manpower is adjusted back to 3-on-3 (providing no other penalty has been assessed.)
+- Case 2. Team A is assessed a penalty during the overtime period. Manpower is adjusted from 3-on-3 to give Team B a 4-on-3 power play. When Team A’s penalty expires, Team A adds an additional player to the ice making the manpower 4-on-4. At the first stoppage of play after the penalty expiration, manpower is adjusted back to 3-on-3 (providing no other penalty has been assessed.)
+- Case 3. Team A is assessed a penalty during the overtime period. Manpower is adjusted from 3-on-3 to give Team B a 4-on-3 power play. Prior to the expiration of Team A’s penalty, Team B is assessed a penalty which also creates a stoppage of play. Manpower is adjusted back to 3-on-3 as both teams now have a player in the penalty box. If there is no stoppage prior to the expiration of either team’s penalties, each team adds a player as their penalties expire, making the manpower 4-on-4. At the first stoppage of play after the penalties have expired, manpower is adjusted back to 3-on-3 (providing no other penalty has been assessed.)
+
+### Game Stoppages:
+
+1. **Penalties:** The clock will be stopped when a penalty is whistled. The game clock will resume and the penalty clock will start at the next puck drop.
+
+2. **Injuries:** A stoppage of play for injuries will occur as stated in Rule 206 (e). When a player is injured so that he/she cannot continue play or go to his/her bench, the play shall not be stopped until the injured player’s team has secured possession of the puck; if the player’s team is in possession of the puck at the time of injury, play shall be stopped immediately, unless his/her team is in a scoring position. Note:  In the case where it is obvious that a player has sustained a serious injury, the Referee and/or Linesman may stop the play immediately. If the game is stopped due to an injury, the player is not allowed to stay on the ice for the next puck drop, but must go to the bench.
+
+3. **2 minute stop clock rule:** Any game where the score is tied or within one goal with two minutes or less left in REGULATION, the running clock will go to stop time for the remaining time.  This does NOT apply to ANY overtime period.  Once the clock goes to stop time, it will remain stop time until the end of regulation even if the goal differential is expanded to more the one goal.
+
+4. **Timeout/Captain’s Timeout:** For each game, each team is given one regular 60 second timeout to discuss team strategy, as well as a 60 second “captain’s timeout”. The NMHockey League has established the captain’s timeout specifically to allow captains to better control the overall attitude of a game. If, in any game, the players’ behavior on either side is becoming unruly or dangerous, a captain may call a timeout to meet with the opposing captain and/or referees as needed to discuss how to better control the game. It is also a time for the captains to meet with their own players to calm them down. This is not a time to meet with your players to discuss strategy or criticize the referees; however, you may request of the referees that a game be called tighter. Captain’s wishing to exercise the captain’s timeout should call for time and let the referees know that it is a “captain’s timeout” and ask that the referees summon the opposing captain to confer. In the interest of player’s safety please use these timeouts as needed.  However, rarely are these timeouts necessary, as most players understand this is all just for fun.
+
+
+## Standings and Tie Breaker Rule
+
+In the regular season, 2 points are awarded for each win and 1 point for each overtime loss. In the event of a tie in points the following tie breaker rules will be applied:
+
+1. In case of tie for Points, team with the most Wins
+2. In case of tie for Wins, team with highest ROW (regulation + OT wins/non-shootout wins)
+3. In case of tie for Points, Wins, and ROW, the teams head-to-head record* will be used.
+4. In case teams are still tied, team with highest Goals For/Goals Against differential.
+5. In case teams are still tied, team with most Goals For.
+6. In case teams are still tied, team with least Goals Against.
+7. In case teams are still tied, a coin toss.
+
+* Head-to-head record – The team’s regular season wins when they played each other.
+
+
+## Playoff and Championship Details
+
+The format of the playoffs depend on the number of teams. Currently all divisions use the 4-team playoff.
+
+
+### 4-Team Playoffs and Championship
+
+In a 4-team league, the teams will play a three week round robin to determine who will play for the championship. Teams will begin with bonus points based on regular season finish: 3 points for 1st place, 2 points for 2nd, 1 point for 3rd and 0 points for 4th. Each win in the tournament will earn the team four points. The two teams with the highest points at the end of the playoffs will play for the championship, and the remaining two teams will play in the consolation game. All games in the post-season will be played out to a victor; there will be no ties and no points given for an overtime loss. See Section VII.a for details on overtime in playoffs, championship and consolation games.
+
+
+### 6-Team Playoffs and Championship
+
+
+In a 6-team league, the teams will play a five week round robin to determine who will play for the championship. Teams will begin with bonus points based on regular season finish: 5 points for 1st place, 4 points for 2nd, 3 points for 3rd, 2 points for 4th, 1 point for 5th and 0 points for 6th. Each win in the tournament will earn the team six points. The two teams with the highest points at the end of the playoffs will play for the championship and the remaining four teams will play in the consolation games in the order of their playoff points; i.e., the team finishing third will play the team finishing fourth, etc. All games in the post-season will be played out to a victor; there will be no ties and no points given for an overtime loss. See Section V.b for details on overtime in playoffs, championship and consolation games.
+
+### 8-Team Playoffs and Championship
+
+In an 8-team league, the playoffs shall be conducted as a single elimination championship bracket with consolation games over a 3-week period in the following manner:
+
+- All seeds are based on regular season results.
+- Home teams will be the highest seeded team.
+- All games in the post-season will be played out to a victor; there will be no ties and no points given for an overtime loss.
+- See Section ??? for details on overtime in playoffs, championship and consolation games.
+
+
+**Week 1 – Round 1:**
+
+From the regular season, the highest seed shall play the lowest seed, the next highest seed shall play the next lowest seed, etc.
+
+- 1st vs. 8th
+- 2nd vs. 7th
+- 3rd vs. 6th
+- 4th vs. 5th
+
+
+**Week 2 – Round 2:**
+
+Winners from Week 1 (each having a record of 1-0) shall proceed to play each other in the following format:
+
+- Highest remaining seed vs. lowest remaining seed.
+- Next highest remaining seed vs. next lowest remaining seed.
+
+Losers from Week 1 (each having a record of 0-1) shall proceed to play each other in the following format:
+
+- Highest remaining seed vs. lowest remaining seed.
+- Next highest remaining seed vs. next lowest remaining seed.
+
+**Week 3 – Championship/Consolation Round:**
+
+Winners of games from both Week 1 & Week 2 (each having a record of 2-0) shall play for the Championship.
+
+- Highest remaining seed vs. lowest remaining seed.
+
+Losers of  both Week 1 & Week 2 games will play for 7th place. (each having a record of 0-2)
+
+The remaining four teams (each having a record of 1-1) shall play each other in the following manner:
+
+- The two highest remaining seeds shall play for 3rd place
+- The two lowest remaining seeds shall play for 5th place
+
+
+
+
+## League Statistics
+
+League standings and statistics are located on the league website and will be updated at least once during the week. If errors are found in the statistics, players should notify their captain who shall notify the league commissioner for review.
+XI. Mercy Rule
+
+The NMHockey League does not exercise a “mercy rule”. We encourage all players, in recognition of good sportsmanship, to maintain a respectful goal differential in all games played.
+
+## Home Ice
+
+NMHockey plays all of its games at the same rink, so having the home ice does not lend itself to a home crowd advantage. However, there are two advantages the home team enjoys:
+
+- (Rule 204) The home team is allowed the last line change at each stoppage of play as long as it does not result in the delay of the game.
+- The home team is given the choice of which team shoots first in the shootout.
+
+Home ice for the playoffs will be given to the team in the match up that had the better regular season. In the event that both teams have the same record, the tiebreaker rules will apply. Home ice for championship and consolation games will be given to the team in the match up that had the better playoff record. In the event that both teams have the same record, the tiebreaker rules will apply.
+
+
+
+## Game Postponements and Schedule changes
+
+Any games postponed or needing to be rescheduled due to inclement weather, equipment failure or any other unforeseen factor shall be handled in the following manner:
+
+1. All players affected will be contacted in a timely manner.
+2. Announcement of postponement will be promptly posted to the league web site or sent via email.
+3. Any postponed or rescheduled regular season games will be rescheduled prior to the start of the playoffs. Any postponed playoff game will be rescheduled prior to the championship game.  Schedule changes will be made only to accommodate games that cannot be played due to the aforementioned circumstances and shall not be rescheduled to accommodate individual player scheduling conflicts.
+
+
+## Refunds
+
+Players that are forced to withdraw during the season due to injury or other extenuating circumstances may receive a prorated refund. Refunds will be based on the number of remaining games from when a replacement player is assigned to the team roster and a refund check will be issued within 30 days.
+
+
+## Protests and Complaints
+
+Recognizing that a vital objective of league play is development of play and sportsmanship, protests of a game’s result are not favored and normally denied except in instances of a gross violation of the rules, e.g. the use of an ineligible substitute.
+
+Protests that are submitted shall be handled in the following manner:
+
+1. Winning teams may not file a protest.
+2. Protests must be submitted via e-mail by the team captain to the league commissioner within 48 hours on the completion of the game. The appropriate league committee will review the protest. Protests submitted by any other team member will not be considered. The reviewing committee will respond to the protest within 72 hours of receipt (unless more prompt response is needed).
+3. ALL referees judgmental decisions are final and are not subject to protest, appeal or review.
+4. A situation may occur which is not appropriate for protest, but with respect to which a team wishes to complain. In such a case, the same basic procedures as for a protest shall be followed. The result of a complaint will have no effect on a game’s result, but may serve to clarify league, club, team or individual membership actions and policy.
+
+Complaints about player behavior should first be addressed to the team captain.  The team captain may then work with the other player’s captain to address the behavior or escalate the complaint to the division vice commissioner.  The vice commissioner will then investigate the issue and decide whether there is sufficient evidence to move the issue to the disciplinary committee or close the complaint.
+
+
+
+
 
 
 
