--- a/divisions/Ediv/goalies.qmd
+++ b/divisions/Ediv/goalies.qmd
@@ -17,6 +17,7 @@ library("tidyverse")
 library("tinytable")
 library("readxl")
 
+library("DT")
 
 # Read scores data
 
@@ -43,14 +44,22 @@ idx_evn <- seq(2,nplay,2)
 
 
 
-goalies |> 
-  # tt( theme="striped" ) |> 
-  tt() |> 
-  style_tt( i=0, background="skyblue3" ) |> 
-  style_tt( i=idx_odd, background="white", color="grey20" ) |> 
-  style_tt( i=idx_evn, background="grey90", color="grey20" ) |> 
-  style_tt( align="c" ) |> 
-  theme_html( portable=TRUE )
+# goalies |> 
+#   # tt( theme="striped" ) |> 
+#   tt() |> 
+#   style_tt( i=0, background="skyblue3" ) |> 
+#   style_tt( i=idx_odd, background="white", color="grey20" ) |> 
+#   style_tt( i=idx_evn, background="grey90", color="grey20" ) |> 
+#   style_tt( align="c" ) |> 
+#   theme_html( portable=TRUE )
+
+datatable( goalies, options = list(
+       pageLength = -1,
+      initComplete = JS(
+        "function(settings, json) {",
+        "$(this.api().table().header()).css({'background-color': 'rgba(73, 172, 204)', 'color': 'white'});",
+        "}")
+    ))
 
 
 ```
