--- a/divisions/Ediv/scores.qmd
+++ b/divisions/Ediv/scores.qmd
@@ -17,6 +17,7 @@ library("tidyverse")
 library("tinytable")
 library("readxl")
 
+library("DT")
 
 # Read scores data
 
@@ -47,15 +48,23 @@ idx_off  <- which( is.na(scores$WEEK) )
 
 
 
-scores |> 
-  # tt( theme="striped" ) |> 
-  tt() |> 
-  style_tt( i=0, background="skyblue3" ) |> 
-  style_tt( i=idx_off, background="white", color="grey20" ) |> 
-  style_tt( i=idx_odd, background="white", color="grey20" ) |> 
-  style_tt( i=idx_evn, background="grey90", color="grey20" ) |> 
-  style_tt( j=c(1,2,3,5,6,7), align="c" ) |> 
-  theme_html( portable=TRUE )
+# scores |> 
+#   # tt( theme="striped" ) |> 
+#   tt() |> 
+#   style_tt( i=0, background="skyblue3" ) |> 
+#   style_tt( i=idx_off, background="white", color="grey20" ) |> 
+#   style_tt( i=idx_odd, background="white", color="grey20" ) |> 
+#   style_tt( i=idx_evn, background="grey90", color="grey20" ) |> 
+#   style_tt( j=c(1,2,3,5,6,7), align="c" ) |> 
+#   theme_html( portable=TRUE )
+
+datatable( scores, options = list(
+       pageLength = -1,
+      initComplete = JS(
+        "function(settings, json) {",
+        "$(this.api().table().header()).css({'background-color': 'rgba(73, 172, 204)', 'color': 'white'});",
+        "}")
+    ))
 
 
 ```
